--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch==2.1.1+cu118
+torch==2.1.1
 tqdm==4.66.1
 sentence-transformers==2.2.2
 scikit-learn==1.3.2
 numpy==1.24.1
 customtkinter==5.2.2
+scipy==1.11.3
